feat: describe for tests

--- a/src/index.html
+++ b/src/index.html
@@ -74,7 +74,7 @@
           <button class="blocking">tanh</button>
           <button class="blocking">&pi;</button>
           <button class="blocking">Rand</button>
-          <button class="null number">0</button>
+          <button class="numberZero number">0</button>
           <button class="point">.</button>
           <button class="answer">=</button>
         </div>
